--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-    <html lang="ru">
+    <html lang="ru-RU">
 
     <head>
     	<meta charset="UTF-8">
@@ -12,7 +12,7 @@
         <div class="container" id="container">
 
         	<div class="form-container sign-in-container">
-        		<form action="/processjson" id="form_id"  onsubmit="javascript:return validateEmail('form_id','email'), validatePassword();">
+        		<form action="/processjson" id="form_id"  onsubmit="javascript:return validatePassword();">
 
         			<h1>Вход</h1>
 
@@ -36,7 +36,7 @@
 
         <footer>
         	<p>
-        	Интернет-банк «Альфа-Банк»
+        	Интернет-банкинг «Альфа-Банк»
         	</p>
         </footer>
         <script src="js/main.js" type="text/javascript"></script>
